# arcane-campus-online

./: LICENSE  README.md
outputs/HogwartsOnline/: .gitignore  CMakeLists.txt
outputs/HogwartsOnline/database/: README.md  seed_redis_commands.txt
outputs/HogwartsOnline/database/include/: CharacterDAO.hpp  DBConnection.hpp  DBConnectionPool.hpp  FriendDAO.hpp  IDatabaseDriver.hpp  InventoryDAO.hpp  LocationDAO.hpp  MessageDAO.hpp  NPCDAO.hpp  RoomDAO.hpp  UserDAO.hpp
outputs/HogwartsOnline/database/sql/: init_mysql.sql  map_feature.sql  migrate_v1.sql  seed_mysql.sql
outputs/HogwartsOnline/database/src/: CharacterDAO.cpp  DBConnection.cpp  DBConnectionPool.cpp  FriendDAO.cpp  InventoryDAO.cpp  MessageDAO.cpp  NPCDAO.cpp  NoopDatabaseDriver.cpp  NoopDatabaseDriver.hpp  RoomDAO.cpp  UserDAO.cpp
outputs/HogwartsOnline/docs/: PROJECT_OVERVIEW.md
outputs/HogwartsOnline/server/: README.md
outputs/HogwartsOnline/server/Controller/: InventoryController.cpp  InventoryController.h  MapController.cpp  MapController.h
outputs/HogwartsOnline/server/DAO/: CharacterDAO.cpp  CharacterDAO.hpp  FriendDAO.cpp  FriendDAO.hpp  InventoryDAO.cpp  InventoryDAO.hpp  LocationDAO.cpp  LocationDAO.hpp  MessageDAO.cpp  MessageDAO.hpp  NPCDAO.cpp  NPCDAO.hpp  RoomDAO.cpp  RoomDAO.hpp  UserDAO.cpp  UserDAO.hpp
outputs/HogwartsOnline/server/DO/: PlayerInventoryDO.h  PlayerLocationDO.h
outputs/HogwartsOnline/server/Query/: InventoryQuery.h  MapUseQuery.h
outputs/HogwartsOnline/server/Service/: InventoryService.h  MapService.cpp  MapService.h
outputs/HogwartsOnline/server/VO/: InventoryListResponseVO.h  MapResponseVO.h
outputs/HogwartsOnline/src/: main.cpp
outputs/HogwartsOnline/src/core/: DeepSeekClient.cpp  DeepSeekClient.h  LanguageManager.cpp  LanguageManager.h  LocationData.cpp  LocationData.h
outputs/HogwartsOnline/src/i18n/: arcane_campus_en_US.ts  arcane_campus_zh_CN.ts
outputs/HogwartsOnline/src/resources/: resources.qrc
outputs/HogwartsOnline/src/resources/qss/: dark_wood.qss
outputs/HogwartsOnline/src/ui/: LoginWindow.cpp  LoginWindow.h  MainWindow.cpp  MainWindow.h  WelcomeWindow.cpp  WelcomeWindow.h
outputs/HogwartsOnline/src/ui/widgets/: CampusTimeWidget.cpp  CampusTimeWidget.h  CharacterStatusWidget.cpp  CharacterStatusWidget.h  ChatEventWidget.cpp  ChatEventWidget.h  CourseScheduleWidget.cpp  CourseScheduleWidget.h  HouseRankingWidget.cpp  HouseRankingWidget.h  InventoryWidget.cpp  InventoryWidget.h  LocationActionBar.cpp  LocationActionBar.h  LocationBrowserWidget.cpp  LocationBrowserWidget.h  MemberListWidget.cpp  MemberListWidget.h  NpcChatDialog.cpp  NpcChatDialog.h
outputs/HogwartsOnline/tests/database/: DatabaseSmokeTest.cpp
phase1-udp-chatroom/: ChatClient.cc  ChatServerMain.cc  InetAddr.hpp  Logger.hpp  Mutex.hpp  Route.hpp  ThreadPool.hpp  UdpServer.hpp  UserManager.hpp  knowledge.md
